[package]
name = "gpu-worker-upload-response"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
http-pack = { git = "https://github.com/wavey-ai/http-pack.git", default-features = false }
upload-response = { git = "https://github.com/wavey-ai/web-services.git", rev = "b5d4a2ea04181cd98ffebd07cd55d43c4963aea0" }
